Table book for golang
